feat: bind blocks api route
